add packages to landing

--- a/_config.yml
+++ b/_config.yml
@@ -2,33 +2,11 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
-  - title: 'IsoGeneGUI: Multiple Approaches for Dose-Response Analysis of Microarray
-      Data Using R'
-    slug: otava-shkedy-lin-etal
-    author: Martin Otava, Rudradev Sengupta, Ziv Shkedy, Dan Lin, Setia Pramana, Tobias
-      Verbeke, Philippe Haldermans, Ludwig A. Hothorn, Daniel Gerhard, Rebecca M.
-      Kuiper, Florian Klinglmueller and Adetayo Kasim
-    abstract: The analysis of transcriptomic experiments with ordered covariates,
-      such as dose-response data, has become a central topic in bioinformatics, in
-      particular in omics studies. Consequently, multiple R packages on CRAN and Bioconductor
-      are designed to analyse microarray data from various perspectives under the
-      assumption of order restriction. We introduce the new R package IsoGene Graphical
-      User Interface (IsoGeneGUI), an extension of the original IsoGene package that
-      includes methods from most of available R packages designed for the analysis
-      of order restricted microarray data, namely orQA, ORIClust, goric and ORCME.
-      The methods included in the new IsoGeneGUI range from inference and estimation
-      to model selection and clustering tools. The IsoGeneGUI is not only the most
-      complete tool for the analysis of order restricted microarray experiments available
-      in R but also it can be used to analyse other types of dose-response data. The
-      package provides all the methods in a user friendly fashion, so analyses can
-      be implemented by users with limited knowledge of R programming.
-    acknowledged: '2015-07-22'
-    online: '2017-03-12'
   - title: 'OrthoPanels: An R Package for Estimating a Dynamic Panel Model with Fixed
       Effects Using the Orthogonal Re-parameterization Approach'
     slug: pickup-gustafson-cubranic-etal
     author: Mark Pickup, Paul Gustafson, Davor Cubranic and Geoffrey Evans
-    abstract: 'This article describes the R package Orthopanels, which includes the
+    abstract: 'This article describes the R package OrthoPanels, which includes the
       function opm(). This function implements the orthogonal reparameterization approach
       recommended by Lancaster (2002) to estimate dynamic panel models with fixed
       effects (and optionally: wave specific intercepts). This article provides a
@@ -36,7 +14,10 @@ issues:
       of the package using real-world data, and simulations comparing the estimator
       to the known-to-be-biased OLS estimator and the commonly used GMM estimator.'
     acknowledged: '2015-11-15'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=OrthoPanels" target="_blank">OrthoPanels</a>
+    - <a href="https://cran.r-project.org/package=plm" target="_blank">plm</a>
   - title: 'smoof: Single- and Multi-Objective Optimization Test Functions'
     slug: bossek
     author: Jakob Bossek
@@ -49,7 +30,18 @@ issues:
       easily create own test functions. Moreover, the package offers some additional
       helper methods, which can be used in the context of optimization.
     acknowledged: '2016-02-28'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=emoa" target="_blank">emoa</a>
+    - <a href="https://cran.r-project.org/package=mco" target="_blank">mco</a>
+    - <a href="https://cran.r-project.org/package=ecr" target="_blank">ecr</a>
+    - <a href="https://cran.r-project.org/package=cec2005benchmark" target="_blank">cec2005benchmark</a>
+    - <a href="https://cran.r-project.org/package=cec2013" target="_blank">cec2013</a>
+    - <a href="https://cran.r-project.org/package=globalOptTests" target="_blank">globalOptTests</a>
+    - <a href="https://cran.r-project.org/package=soobench" target="_blank">soobench</a>
+    - <a href="https://cran.r-project.org/package=smoof" target="_blank">smoof</a>
+    - <a href="https://cran.r-project.org/package=ParamHelpers" target="_blank">ParamHelpers</a>
+    - <a href="https://cran.r-project.org/package=ggplot2" target="_blank">ggplot2</a>
   - title: ' alineR: an R Package for Optimizing Feature-Weighted Alignments and Linguistic
       Distances'
     slug: downey-downey-sun-etal
@@ -78,7 +70,14 @@ issues:
       by approximately 29%, and that optimization and significantly affects the resulting
       distance measurements. Availability: alineR is available on CRAN.'
     acknowledged: '2016-04-18'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=alineR" target="_blank">alineR</a>
+    - <a href="https://cran.r-project.org/package=stringdist" target="_blank">stringdist</a>
+    - <a href="https://cran.r-project.org/package=RecordLinkage" target="_blank">RecordLinkage</a>
+    - <a href="https://cran.r-project.org/package=doMC" target="_blank">doMC</a>
+    BIOpkgs: <a href="https://www.bioconductor.org/packages/release/bioc/html/Biostrings.html"
+      target="_blank">Biostrings</a>
   - title: Implementing a Metapopulation Bass Diffusion Model using the R Package
       deSolve
     slug: duggan
@@ -99,29 +98,12 @@ issues:
       to implement large-scale integral equation models, with applications in the
       field of marketing and consumer behaviour.'
     acknowledged: '2016-04-30'
-    online: '2017-03-12'
-  - title: 'MDplot: visualise Molecular Dynamics'
-    slug: margreitter-margreitter-oostenbrink
-    author: Christian Margreitter and Chris Oostenbrink
-    abstract: 'The MDplot package provides plotting functions to allow for automated
-      visualisation of molecular dynamics simulation output. It is especially useful
-      in cases where the plot generation is rather tedious due to complex file formats
-      or when large amounts of plots are generated. The graphs that are supported
-      range from those which are standard such as RMSD/RMSF (root-mean-square deviation
-      and root-mean-square fluctuation, respectively) to thermodynamic integration
-      analysis and hydrogen bond monitoring over time and address many commonly used
-      analyses. In this article, we set out the package’s functions, give examples
-      of the function calls and show the associated plots. Plotting and data parsing
-      is separated in all cases, i.e. the respective functions can be used independently.
-      Thus, data manipulation and the integration of additional file formats is fairly
-      easy. Currently, the loading functions support GROMOS, GROMACS and AMBER file
-      formats. Moreover, we also provide a bash interface that allows simple embedding
-      of MDplot into bash scripts as the final analysis step. Availability: The package
-      can be obtained in the latest major version from CRAN (https://cran.r- project.org/web/packages/MDplot)
-      or in the most recent version from the projects’ GitHub page at https://github.com/MDplot/MDplot,
-      where feedback is also most welcome. MDplot is published under the GPL-3 license.'
-    acknowledged: '2016-04-30'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=deSolve" target="_blank">deSolve</a>
+    - <a href="https://cran.r-project.org/package=EpiModel" target="_blank">EpiModel</a>
+    - <a href="https://cran.r-project.org/package=ggplot2" target="_blank">ggplot2</a>
+    - <a href="https://cran.r-project.org/package=scales" target="_blank">scales</a>
   - title: 'On some extensions to GA package: hybrid optimisation, parallelisation
       and islands evolution'
     slug: scrucca
@@ -139,40 +121,26 @@ issues:
       are presented, with both real-world data examples and benchmark functions, showing
       that often high-quality solutions can be obtained more efficiently.
     acknowledged: '2016-05-29'
-    online: '2017-03-12'
-  - title: 'imputeTS: Time Series Missing Value Imputation in R'
-    slug: moritz-bartzbeielstein
-    author: Steffen Moritz and Thomas Bartz-Beielstein
-    abstract: The imputeTS package specializes on univariate time series imputation.
-      It offers multiple state-of-the-art imputation algorithm implementations along
-      with plotting functions for time series missing data statistics. While imputation
-      in general is a well-known problem and widely covered by R packages, finding
-      packages able to fill missing values in univariate time series is more complicated.
-      The reason for this lies in the fact that most imputation algorithms rely on
-      inter-attribute correlations, while univariate time series imputation instead
-      needs to employ time dependencies. This paper provides an introduction to the
-      imputeTS package and its provided algorithms and tools. Furthermore, it gives
-      a short overview about univariate time series imputation in R.
-    acknowledged: '2016-07-12'
-    online: '2017-03-12'
-  - title: 'The NoiseFiltersR Package: Label Noise Preprocessing in R'
-    slug: luengo-morales-garcia-etal
-    author: Pablo Morales, Julián Luengo, Luís P.F. Garcia, Ana C. Lorena, André C.P.L.F.
-      de Carvalho and Francisco Herrera
-    abstract: In Data Mining, the value of extracted knowledge is directly related
-      to the quality of the used data. This makes data preprocessing one of the most
-      important steps in the knowledge discovery process. A common problem affecting
-      data quality is the presence of noise. A training set with label noise can reduce
-      the predictive performance of classification learning techniques and increase
-      the overfitting of classification models. In this work we present the NoiseFiltersR
-      package. It contains the first extensive R implementation of classical and state-of-the-art
-      label noise filters, which are the most common techniques for preprocessing
-      label noise. The algorithms used for the implementation of the label noise filters
-      are appropriately documented and referenced. They can be called in a R-user-friendly
-      manner, and their results are unified by means of the "filter" class, which
-      also benefits from adapted print and summary methods.
-    acknowledged: '2016-07-12'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=rgenoud" target="_blank">rgenoud</a>
+    - <a href="https://cran.r-project.org/package=Rmalschains" target="_blank">Rmalschains</a>
+    - <a href="https://cran.r-project.org/package=DEoptim" target="_blank">DEoptim</a>
+    - <a href="https://cran.r-project.org/package=GenSA" target="_blank">GenSA</a>
+    - <a href="https://cran.r-project.org/package=pso" target="_blank">pso</a>
+    - <a href="https://cran.r-project.org/package=cmaes" target="_blank">cmaes</a>
+    - <a href="https://cran.r-project.org/package=tabuSearch" target="_blank">tabuSearch</a>
+    - <a href="https://cran.r-project.org/package=GA" target="_blank">GA</a>
+    - <a href="https://cran.r-project.org/package=quantmod" target="_blank">quantmod</a>
+    - <a href="https://cran.r-project.org/package=doParallel" target="_blank">doParallel</a>
+    - <a href="https://cran.r-project.org/package=foreach" target="_blank">foreach</a>
+    - <a href="https://cran.r-project.org/package=iterators" target="_blank">iterators</a>
+    - <a href="https://cran.r-project.org/package=doRNG" target="_blank">doRNG</a>
+    - <a href="https://cran.r-project.org/package=forecast" target="_blank">forecast</a>
+    - <a href="https://cran.r-project.org/package=astsa" target="_blank">astsa</a>
+    - <a href="https://cran.r-project.org/package=globalOptTests" target="_blank">globalOptTests</a>
+    - <a href="https://cran.r-project.org/package=Rcpp" target="_blank">Rcpp</a>
+    - <a href="https://cran.r-project.org/package=memoise" target="_blank">memoise</a>
   - title: Update of the nlme Package to Allow a Fixed Standard Deviation of the Residual
       Error
     slug: heisterkamp-vanwilligen-diderichsen-etal
@@ -197,7 +165,8 @@ issues:
       Comprehensive R Archive Network (CRAN) team and will be available at the CRAN
       website.
     acknowledged: '2016-08-25'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs: <a href="https://cran.r-project.org/package=nlme" target="_blank">nlme</a>
   - title: 'EMSaov: An R Package for the Analysis of Variances with the Expected Mean
       Squares and its Shiny Application'
     slug: lee-choe-kim
@@ -214,27 +183,12 @@ issues:
       that our application can contribute to the efficient and easy analysis of experimental
       data.
     acknowledged: '2016-08-25'
-    online: '2017-03-12'
-  - title: 'GsymPoint: An R Package to Estimate the Generalized Symmetry Point, an
-      Optimal Cut-off Point for Binary Classification in Continuous Diagnostic Tests'
-    slug: lopezraton-mmolaneslopez-leton-etal
-    author: Mónica López-Ratón, Elisa M. Molanes-López, Emilio Letón, and Carmen Cadarso-Suárez
-    abstract: In clinical practice, it is very useful to select an optimal cutpoint
-      in the scale of a continuous biomarker or diagnostic test for classifying individuals
-      as healthy or diseased. Several methods for choosing optimal cutpoints have
-      been presented in the literature, depending on the ultimate goal. One of these
-      methods, the Generalized Symmetry point, recently introduced, generalizes the
-      Symmetry point by incorporating the misclassification costs. Two statistical
-      approaches have been proposed in the literature for estimating this optimal
-      cutpoint and its associated sensitivity and specificity measures, a parametric
-      method based on the Generalized Pivotal Quantity and a nonparametric method
-      based on Empirical Likelihood. In this paper, we introduce GsymPoint, an R package
-      that implements these methods in a user-friendly environment, allowing the end-user
-      to calculate the Generalized Symmetry point depending on the levels of certain
-      categorical covariates. The practica l use of this package is illustrated using
-      three real biomedical datasets.
-    acknowledged: '2016-08-25'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=nlme" target="_blank">nlme</a>
+    - <a href="https://cran.r-project.org/package=afex" target="_blank">afex</a>
+    - <a href="https://cran.r-project.org/package=EMSaov" target="_blank">EMSaov</a>
+    - <a href="https://cran.r-project.org/package=shiny" target="_blank">shiny</a>
   - title: Multilabel Classification with R Package mlr
     slug: probst-probst-au-etal
     author: Philipp Probst, Quay Au, Giuseppe Casalicchio, Clemens Stachl and Bernd
@@ -249,24 +203,14 @@ issues:
       In a benchmark experiment with several multilabel datasets, the performance
       of the different methods is evaluated.
     acknowledged: '2016-09-12'
-    online: '2017-03-12'
-  - title: 'pdp: An R Package for Constructing Partial Dependence Plots'
-    slug: greenwell
-    author: Brandon M. Greenwell
-    abstract: Complex nonparametric models—like neural networks, random forests, and
-      support vector machines—are more common than ever in predictive analytics, especially
-      when dealing with large observational databases that don’t adhere to the strict
-      assumptions imposed by traditional statistical techniques (e.g., multiple linear
-      regression which assumes linearity, homoscedasticity, and normality). Unfortunately,
-      it can be challenging to understand the results of such models and explain them
-      to management. Partial dependence plots offer a simple solution. Partial dependence
-      plots are low- dimensional graphical renderings of the prediction function fb
-      ( x) so that the relationship between the outcome and predictors of interest
-      can be more easily understood. These plots are especially useful in explaining
-      the output from black box models. In this paper, we introduce pdp, a general
-      R package for constructing partial dependence plots.
-    acknowledged: '2016-09-30'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=mldr" target="_blank">mldr</a>
+    - <a href="https://cran.r-project.org/package=rFerns" target="_blank">rFerns</a>
+    - <a href="https://cran.r-project.org/package=randomForestSRC" target="_blank">randomForestSRC</a>
+    - <a href="https://cran.r-project.org/package=randomForestSRC" target="_blank">randomForestSRC</a>
+    - <a href="https://cran.r-project.org/package=ada" target="_blank">ada</a>
+    - <a href="https://cran.r-project.org/package=batchtools" target="_blank">batchtools</a>
   - title: 'milr: Multiple-Instance Logistic Regression with Lasso Penalty'
     slug: chen-chen-yang-etal
     author: Ping-Yang Chen, Ching-Chuan Chen, Chun-Hao Yang, Sheng-Mao Chang, Kuo-Jung
@@ -284,7 +228,8 @@ issues:
       to generic functions fitted, predict and summary. Simulated data and a real
       example are given to demonstrate the features of this package.
     acknowledged: '2016-11-16'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs: <a href="https://cran.r-project.org/package=milr" target="_blank">milr</a>
   - title: 'spcadjust: An R Package for Adjusting for Estimation Error in Control
       Charts'
     slug: gandy-kvaloy
@@ -302,7 +247,16 @@ issues:
       risk adjusted monitoring are included, and it is easy for the user to add further
       charts. Use of the package is demonstrated by examples.
     acknowledged: '2016-11-16'
-    online: '2017-03-12'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=spcadjust" target="_blank">spcadjust</a>
+    - <a href="https://cran.r-project.org/package=surveillance" target="_blank">surveillance</a>
+    - <a href="https://cran.r-project.org/package=spc" target="_blank">spc</a>
+    - <a href="https://cran.r-project.org/package=qcc" target="_blank">qcc</a>
+    - <a href="https://cran.r-project.org/package=IQCC" target="_blank">IQCC</a>
+    - <a href="https://cran.r-project.org/package=qcr" target="_blank">qcr</a>
+    - <a href="https://cran.r-project.org/package=edcc" target="_blank">edcc</a>
+    - <a href="https://cran.r-project.org/package=MSQC" target="_blank">MSQC</a>
 - issue: 2009-1
   year: 2009
   volume: 1
