--- a/_config.yml
+++ b/_config.yml
@@ -18,30 +18,6 @@ issues:
     CRANpkgs:
     - <a href="https://cran.r-project.org/package=OrthoPanels" target="_blank">OrthoPanels</a>
     - <a href="https://cran.r-project.org/package=plm" target="_blank">plm</a>
-  - title: 'smoof: Single- and Multi-Objective Optimization Test Functions'
-    slug: bossek
-    author: Jakob Bossek
-    abstract: Benchmarking algorithms for optimization problems usually is carried
-      out by running the algorithms under consideration on a diverse set of benchmark
-      or test functions. A vast variety of test functions was proposed by researchers
-      and is being used for investigations in the literature. The smoof package implements
-      a large set of test functions and test function generators for both the single-
-      and multi-objective case in continuous optimization and provides functions to
-      easily create own test functions. Moreover, the package offers some additional
-      helper methods, which can be used in the context of optimization.
-    acknowledged: '2016-02-28'
-    online: '2017-03-13'
-    CRANpkgs:
-    - <a href="https://cran.r-project.org/package=emoa" target="_blank">emoa</a>
-    - <a href="https://cran.r-project.org/package=mco" target="_blank">mco</a>
-    - <a href="https://cran.r-project.org/package=ecr" target="_blank">ecr</a>
-    - <a href="https://cran.r-project.org/package=cec2005benchmark" target="_blank">cec2005benchmark</a>
-    - <a href="https://cran.r-project.org/package=cec2013" target="_blank">cec2013</a>
-    - <a href="https://cran.r-project.org/package=globalOptTests" target="_blank">globalOptTests</a>
-    - <a href="https://cran.r-project.org/package=soobench" target="_blank">soobench</a>
-    - <a href="https://cran.r-project.org/package=smoof" target="_blank">smoof</a>
-    - <a href="https://cran.r-project.org/package=ParamHelpers" target="_blank">ParamHelpers</a>
-    - <a href="https://cran.r-project.org/package=ggplot2" target="_blank">ggplot2</a>
   - title: ' alineR: an R Package for Optimizing Feature-Weighted Alignments and Linguistic
       Distances'
     slug: downey-downey-sun-etal
@@ -104,43 +80,6 @@ issues:
     - <a href="https://cran.r-project.org/package=EpiModel" target="_blank">EpiModel</a>
     - <a href="https://cran.r-project.org/package=ggplot2" target="_blank">ggplot2</a>
     - <a href="https://cran.r-project.org/package=scales" target="_blank">scales</a>
-  - title: 'On some extensions to GA package: hybrid optimisation, parallelisation
-      and islands evolution'
-    slug: scrucca
-    author: Luca Scrucca
-    abstract: Genetic algorithms are stochastic iterative algorithms in which a population
-      of individuals evolve by emulating the process of biological evolution and natural
-      selection. The R package GA provides a collection of general purpose functions
-      for optimisation using genetic algorithms. This paper describes some enhancements
-      recently introduced in version 3 of the package. In particular, hybrid GAs have
-      been implemented by including the option to perform local searches during the
-      evolution. This allows to combine the power of genetic algorithms with the speed
-      of a local optimiser. Another major improvement is the provision of facilities
-      for parallel computing. Parallelisation has been implemented using both the
-      master-slave approach and the islands evolution model. Several examples of usage
-      are presented, with both real-world data examples and benchmark functions, showing
-      that often high-quality solutions can be obtained more efficiently.
-    acknowledged: '2016-05-29'
-    online: '2017-03-13'
-    CRANpkgs:
-    - <a href="https://cran.r-project.org/package=rgenoud" target="_blank">rgenoud</a>
-    - <a href="https://cran.r-project.org/package=Rmalschains" target="_blank">Rmalschains</a>
-    - <a href="https://cran.r-project.org/package=DEoptim" target="_blank">DEoptim</a>
-    - <a href="https://cran.r-project.org/package=GenSA" target="_blank">GenSA</a>
-    - <a href="https://cran.r-project.org/package=pso" target="_blank">pso</a>
-    - <a href="https://cran.r-project.org/package=cmaes" target="_blank">cmaes</a>
-    - <a href="https://cran.r-project.org/package=tabuSearch" target="_blank">tabuSearch</a>
-    - <a href="https://cran.r-project.org/package=GA" target="_blank">GA</a>
-    - <a href="https://cran.r-project.org/package=quantmod" target="_blank">quantmod</a>
-    - <a href="https://cran.r-project.org/package=doParallel" target="_blank">doParallel</a>
-    - <a href="https://cran.r-project.org/package=foreach" target="_blank">foreach</a>
-    - <a href="https://cran.r-project.org/package=iterators" target="_blank">iterators</a>
-    - <a href="https://cran.r-project.org/package=doRNG" target="_blank">doRNG</a>
-    - <a href="https://cran.r-project.org/package=forecast" target="_blank">forecast</a>
-    - <a href="https://cran.r-project.org/package=astsa" target="_blank">astsa</a>
-    - <a href="https://cran.r-project.org/package=globalOptTests" target="_blank">globalOptTests</a>
-    - <a href="https://cran.r-project.org/package=Rcpp" target="_blank">Rcpp</a>
-    - <a href="https://cran.r-project.org/package=memoise" target="_blank">memoise</a>
   - title: Update of the nlme Package to Allow a Fixed Standard Deviation of the Residual
       Error
     slug: heisterkamp-vanwilligen-diderichsen-etal
@@ -257,6 +196,127 @@ issues:
     - <a href="https://cran.r-project.org/package=qcr" target="_blank">qcr</a>
     - <a href="https://cran.r-project.org/package=edcc" target="_blank">edcc</a>
     - <a href="https://cran.r-project.org/package=MSQC" target="_blank">MSQC</a>
+  - title: 'smoof: Single- and Multi-Objective Optimization Test Functions'
+    slug: bossek
+    author: Jakob Bossek
+    abstract: Benchmarking algorithms for optimization problems usually is carried
+      out by running the algorithms under consideration on a diverse set of benchmark
+      or test functions. A vast variety of test functions was proposed by researchers
+      and is being used for investigations in the literature. The smoof package implements
+      a large set of test functions and test function generators for both the single-
+      and multi-objective case in continuous optimization and provides functions to
+      easily create own test functions. Moreover, the package offers some additional
+      helper methods, which can be used in the context of optimization.
+    acknowledged: '2016-02-28'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=emoa" target="_blank">emoa</a>
+    - <a href="https://cran.r-project.org/package=mco" target="_blank">mco</a>
+    - <a href="https://cran.r-project.org/package=ecr" target="_blank">ecr</a>
+    - <a href="https://cran.r-project.org/package=cec2005benchmark" target="_blank">cec2005benchmark</a>
+    - <a href="https://cran.r-project.org/package=cec2013" target="_blank">cec2013</a>
+    - <a href="https://cran.r-project.org/package=globalOptTests" target="_blank">globalOptTests</a>
+    - <a href="https://cran.r-project.org/package=soobench" target="_blank">soobench</a>
+    - <a href="https://cran.r-project.org/package=smoof" target="_blank">smoof</a>
+    - <a href="https://cran.r-project.org/package=ParamHelpers" target="_blank">ParamHelpers</a>
+    - <a href="https://cran.r-project.org/package=ggplot2" target="_blank">ggplot2</a>
+    CTVs: <a href="https://CRAN.R-project.org/view=Optimization" target="_blank">Optimization</a>
+  - title: 'On some extensions to GA package: hybrid optimisation, parallelisation
+      and islands evolution'
+    slug: scrucca
+    author: Luca Scrucca
+    abstract: Genetic algorithms are stochastic iterative algorithms in which a population
+      of individuals evolve by emulating the process of biological evolution and natural
+      selection. The R package GA provides a collection of general purpose functions
+      for optimisation using genetic algorithms. This paper describes some enhancements
+      recently introduced in version 3 of the package. In particular, hybrid GAs have
+      been implemented by including the option to perform local searches during the
+      evolution. This allows to combine the power of genetic algorithms with the speed
+      of a local optimiser. Another major improvement is the provision of facilities
+      for parallel computing. Parallelisation has been implemented using both the
+      master-slave approach and the islands evolution model. Several examples of usage
+      are presented, with both real-world data examples and benchmark functions, showing
+      that often high-quality solutions can be obtained more efficiently.
+    acknowledged: '2016-05-29'
+    online: '2017-03-13'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=rgenoud" target="_blank">rgenoud</a>
+    - <a href="https://cran.r-project.org/package=Rmalschains" target="_blank">Rmalschains</a>
+    - <a href="https://cran.r-project.org/package=DEoptim" target="_blank">DEoptim</a>
+    - <a href="https://cran.r-project.org/package=GenSA" target="_blank">GenSA</a>
+    - <a href="https://cran.r-project.org/package=pso" target="_blank">pso</a>
+    - <a href="https://cran.r-project.org/package=cmaes" target="_blank">cmaes</a>
+    - <a href="https://cran.r-project.org/package=tabuSearch" target="_blank">tabuSearch</a>
+    - <a href="https://cran.r-project.org/package=GA" target="_blank">GA</a>
+    - <a href="https://cran.r-project.org/package=quantmod" target="_blank">quantmod</a>
+    - <a href="https://cran.r-project.org/package=doParallel" target="_blank">doParallel</a>
+    - <a href="https://cran.r-project.org/package=foreach" target="_blank">foreach</a>
+    - <a href="https://cran.r-project.org/package=iterators" target="_blank">iterators</a>
+    - <a href="https://cran.r-project.org/package=doRNG" target="_blank">doRNG</a>
+    - <a href="https://cran.r-project.org/package=forecast" target="_blank">forecast</a>
+    - <a href="https://cran.r-project.org/package=astsa" target="_blank">astsa</a>
+    - <a href="https://cran.r-project.org/package=globalOptTests" target="_blank">globalOptTests</a>
+    - <a href="https://cran.r-project.org/package=Rcpp" target="_blank">Rcpp</a>
+    - <a href="https://cran.r-project.org/package=memoise" target="_blank">memoise</a>
+    CTVs:
+    - <a href="https://CRAN.R-project.org/view=Optimization" target="_blank">Optimization</a>
+    - <a href="https://CRAN.R-project.org/view=HighPerformanceComputing" target="_blank">HighPerformanceComputing</a>
+  - title: 'IsoGeneGUI: Multiple Approaches for Dose-Response Analysis of Microarray
+      Data Using R'
+    slug: otava-shkedy-lin-etal
+    author: Martin Otava, Rudradev Sengupta, Ziv Shkedy, Dan Lin, Setia Pramana, Tobias
+      Verbeke, Philippe Haldermans, Ludwig A. Hothorn, Daniel Gerhard, Rebecca M.
+      Kuiper, Florian Klinglmueller and Adetayo Kasim
+    abstract: The analysis of transcriptomic experiments with ordered covariates,
+      such as dose-response data, has become a central topic in bioinformatics, in
+      particular in omics studies. Consequently, multiple R packages on CRAN and Bioconductor
+      are designed to analyse microarray data from various perspectives under the
+      assumption of order restriction. We introduce the new R package IsoGene Graphical
+      User Interface (IsoGeneGUI), an extension of the original IsoGene package that
+      includes methods from most of available R packages designed for the analysis
+      of order restricted microarray data, namely orQA, ORIClust, goric and ORCME.
+      The methods included in the new IsoGeneGUI range from inference and estimation
+      to model selection and clustering tools. The IsoGeneGUI is not only the most
+      complete tool for the analysis of order restricted microarray experiments available
+      in R but also it can be used to analyse other types of dose-response data. The
+      package provides all the methods in a user friendly fashion, so analyses can
+      be implemented by users with limited knowledge of R programming.
+    acknowledged: '2015-07-22'
+    online: '2017-03-14'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=IsoGene" target="_blank">IsoGene</a>
+    - <a href="https://cran.r-project.org/package=orQA" target="_blank">orQA</a>
+    - <a href="https://cran.r-project.org/package=goric" target="_blank">goric</a>
+    - <a href="https://cran.r-project.org/package=ORCME" target="_blank">ORCME</a>
+    - <a href="https://cran.r-project.org/package=ORIClust" target="_blank">ORIClust</a>
+    - <a href="https://cran.r-project.org/package=limma" target="_blank">limma</a>
+    - <a href="https://cran.r-project.org/package=mratios" target="_blank">mratios</a>
+  - title: 'MDplot: Visualise Molecular Dynamics'
+    slug: margreitter-margreitter-oostenbrink
+    author: Christian Margreitter and Chris Oostenbrink
+    abstract: 'The MDplot package provides plotting functions to allow for automated
+      visualisation of molecular dynamics simulation output. It is especially useful
+      in cases where the plot generation is rather tedious due to complex file formats
+      or when large amounts of plots are generated. The graphs that are supported
+      range from those which are standard such as RMSD/RMSF (root-mean-square deviation
+      and root-mean-square fluctuation, respectively) to thermodynamic integration
+      analysis and hydrogen bond monitoring over time and address many commonly used
+      analyses. In this article, we set out the package’s functions, give examples
+      of the function calls and show the associated plots. Plotting and data parsing
+      is separated in all cases, i.e. the respective functions can be used independently.
+      Thus, data manipulation and the integration of additional file formats is fairly
+      easy. Currently, the loading functions support GROMOS, GROMACS and AMBER file
+      formats. Moreover, we also provide a bash interface that allows simple embedding
+      of MDplot into bash scripts as the final analysis step. Availability: The package
+      can be obtained in the latest major version from CRAN (https://cran.r- project.org/package=MDplot)
+      or in the most recent version from the project’s GitHub page at https://github.com/MDplot/MDplot,
+      where feedback is also most welcome. MDplot is published under the GPL-3 license.'
+    acknowledged: '2016-04-30'
+    online: '2017-03-14'
+    CRANpkgs:
+    - <a href="https://cran.r-project.org/package=MDplot" target="_blank">MDplot</a>
+    - <a href="https://cran.r-project.org/package=bio3d" target="_blank">bio3d</a>
+    - <a href="https://cran.r-project.org/package=Rknots" target="_blank">Rknots</a>
 - issue: 2009-1
   year: 2009
   volume: 1
