adding landing system

--- a/_config.yml
+++ b/_config.yml
@@ -303,7 +303,7 @@ issues:
     - <a href="https://cran.r-project.org/package=Rknots" target="_blank">Rknots</a>
   - title: 'OrthoPanels: An R Package for Estimating a Dynamic Panel Model with Fixed
       Effects Using the Orthogonal Re-parameterization Approach'
-    slug: pickup-gustafson-cubranic-etal
+    slug: RJ-2017-001
     author: Mark Pickup, Paul Gustafson, Davor Cubranic and Geoffrey Evans
     abstract: 'This article describes the R package OrthoPanels, which includes the
       function opm(). This function implements the orthogonal reparameterization approach
@@ -317,6 +317,7 @@ issues:
     CRANpkgs:
     - <a href="https://cran.r-project.org/package=OrthoPanels" target="_blank">OrthoPanels</a>
     - <a href="https://cran.r-project.org/package=plm" target="_blank">plm</a>
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
