--- a/_config.yml
+++ b/_config.yml
@@ -524,7 +524,7 @@ issues:
       with several            multilabel datasets, the performance of the different
       methods is evaluated.'
     acknowledged: '2016-09-12'
-    online: '2017-03-27'
+    online: '2017-04-04'
     CRANpkgs:
     - mldr
     - rFerns
@@ -557,7 +557,7 @@ issues:
       introduce pdp, a general R package            for constructing partial dependence
       plots.'
     acknowledged: '2016-09-30'
-    online: '2017-03-27'
+    online: '2017-04-04'
     CRANpkgs:
     - randomForest
     - gbm
@@ -706,6 +706,209 @@ issues:
     acknowledged: '2016-12-23'
     online: '2017-03-27'
     CRANpkgs: wec
+    landing: '2017'
+  - title: 'coxphMIC: An R Package for Sparse Estimation of Cox Proportional Hazards
+      Models via Approximated Information Criteria'
+    bibtitle: |-
+      coxphMIC: An R Package for Sparse Estimation of Cox
+                Proportional Hazards Models via Approximated Information
+                Criteria
+    slug: RJ-2017-018
+    author:
+    - Razieh Nabi
+    - Xiaogang Su
+    bibauthor: Razieh Nabi and Xiaogang Su
+    abstract: '  Abstract In this paper, we describe an R package named coxphMIC,
+      which implements the sparse            estimation method for Cox proportional
+      hazards models via approximated information criterion (Su            et al.,
+      2016). The developed methodology is named MIC which stands for “Minimizing approximated            Information
+      Criteria". A reparameterization step is introduced to enforce sparsity while
+      at the same            time keeping the objective function smooth. As a result,
+      MIC is computationally fast with a superior            performance in sparse
+      estimation. Furthermore, the reparameterization tactic yields an additional            advantage
+      in terms of circumventing post-selection inference (Leeb and Pötscher, 2005).
+      The MIC            method and its R implementation are introduced and illustrated
+      with the PBC data.'
+    acknowledged: '2016-08-25'
+    online: '2017-04-04'
+    landing: '2017'
+  - title: Retrieval and Analysis of Eurostat Open Data with the eurostat Package
+    bibtitle: |-
+      Retrieval and Analysis of Eurostat Open Data with the
+                eurostat Package
+    slug: RJ-2017-019
+    author:
+    - Leo Lahti
+    - Janne Huovari
+    - Markus Kainu
+    - Przemysław Biecek
+    bibauthor: |-
+      Leo Lahti and Janne Huovari and Markus Kainu and Przemysław
+                Biecek
+    abstract: '  Abstract The increasing availability of open statistical data resources
+      is providing novel opportunities            for research and citizen science.
+      Efficient algorithmic tools are needed to realize the full potential of the            new
+      information resources. We introduce the eurostat R package that provides a collection
+      of custom            tools for the Eurostat open data service, including functions
+      to query, download, manipulate, and            visualize these data sets in
+      a smooth, automated and reproducible manner. The online documentation            provides
+      detailed examples on the analysis of these spatio-temporal data collections.
+      This work            provides substantial improvements over the previously available
+      tools, and has been extensively            tested by an active user community.
+      The eurostat R package contributes to the growing open source            ecosystem
+      dedicated to reproducible research in computational social science and digital
+      humanities.'
+    acknowledged: '2016-09-15'
+    online: '2017-04-04'
+    CRANpkgs:
+    - eurostat
+    - eurostat
+    - eurostat
+    - FAOSTAT
+    - WDI
+    - pxweb
+    - osmar
+    - eurostat
+    - smarterpoland
+    - eurostat
+    - eurostat
+    - rsdmx
+    - datamart
+    - quandl
+    - pdfetch
+    - rsdmx
+    - eurostat
+    - classInt
+    - httr
+    - jsonlite
+    - readr
+    - sp
+    - stringi
+    - eurostat
+    - eurostat
+    - tibble
+    - eurostat
+    - plotrix
+    - grid
+    - maptools
+    - rgdal
+    - rgeos
+    - scales
+    - stringr
+    - eurostat
+    - eurostat
+    - countrycode
+    - eurostat
+    CTV_rev:
+    - Spatial
+    - WebTechnologies
+    - Graphics
+    - NaturalLanguageProcessing
+    - SpatioTemporal
+    - TimeSeries
+    landing: '2017'
+  - title: Market Area Analysis for Retail and Service Locations with MCI
+    bibtitle: |-
+      Market Area Analysis for Retail and Service Locations with
+                MCI
+    slug: RJ-2017-020
+    author: Thomas Wieland
+    bibauthor: Thomas Wieland
+    abstract: '  Abstract In retail location analysis, marketing research and spatial
+      planning, the market areas of            stores and/or locations are a frequent
+      subject. Market area analyses consist of empirical observations            and
+      modeling via theoretical and/or econometric models such as the Huff Model or
+      the Multiplicative            Competitive Interaction Model. The authors’ package
+      MCI implements the steps of market area            analysis into R with a focus
+      on fitting the models and data preparation and processing.'
+    acknowledged: '2016-09-12'
+    online: '2017-04-04'
+    CRANpkgs:
+    - MCI
+    - SpatialPosition
+    - ggmap
+    - osmar
+    - osrm
+    - car
+    - spgwr
+    CTV_rev:
+    - Spatial
+    - WebTechnologies
+    - Econometrics
+    - Finance
+    - Multivariate
+    - SocialSciences
+    landing: '2017'
+  - title: 'PSF: Introduction to R Package for Pattern Sequence Based Forecasting
+      Algorithm'
+    bibtitle: |-
+      PSF: Introduction to R Package for Pattern Sequence Based
+                Forecasting Algorithm
+    slug: RJ-2017-021
+    author:
+    - Neeraj Bokde
+    - Gualberto Asencio-Cortés
+    - Francisco Martínez-Álvarez
+    - Kishore Kulat
+    bibauthor: |-
+      Neeraj Bokde and Gualberto Asencio-Cortés and Francisco
+                Martínez-Álvarez and Kishore Kulat
+    abstract: '  Abstract This paper introduces the R package that implements the
+      Pattern Sequence based Forecasting            (PSF) algorithm, which was developed
+      for univariate time series forecasting. This algorithm has been            successfully
+      applied to many different fields. The PSF algorithm consists of two major parts:
+      clustering            and prediction. The clustering part includes selection
+      of the optimum number of clusters. It labels            time series data with
+      reference to such clusters. The prediction part includes functions like optimum            window
+      size selection for specific patterns and prediction of future values with reference
+      to past            pattern sequences. The PSF package consists of various functions
+      to implement the PSF algorithm. It            also contains a function which
+      automates all other functions to obtain optimized prediction results.            The
+      aim of this package is to promote the PSF algorithm and to ease its usage with
+      minimum efforts.            This paper describes all the functions in the PSF
+      package with their syntax. It also provides a simple            example. Finally,
+      the usefulness of this package is discussed by comparing it to auto.arima and
+      ets,            two well-known time series forecasting functions available on
+      CRAN repository.'
+    acknowledged: '2016-09-12'
+    online: '2017-04-04'
+    CRANpkgs: CRAN
+    landing: '2017'
+  - title: 'BayesBinMix: an R Package for Model Based Clustering of Multivariate Binary
+      Data'
+    bibtitle: |-
+      BayesBinMix: an R Package for Model Based Clustering of
+                Multivariate Binary Data
+    slug: RJ-2017-022
+    author:
+    - Panagiotis Papastamoulis
+    - Magnus Rattray
+    bibauthor: Panagiotis Papastamoulis and Magnus Rattray
+    abstract: '  Abstract The BayesBinMix package offers a Bayesian framework for
+      clustering binary data with or            without missing values by fitting
+      mixtures of multivariate Bernoulli distributions with an unknown            number
+      of components. It allows the joint estimation of the number of clusters and
+      model parameters            using Markov chain Monte Carlo sampling. Heated
+      chains are run in parallel and accelerate the            convergence to the
+      target posterior distribution. Identifiability issues are addressed by implementing            label
+      switching algorithms. The package is demonstrated and benchmarked against the
+      Expectation           Maximization algorithm using a simulation study as well
+      as a real dataset.'
+    acknowledged: '2016-09-30'
+    online: '2017-04-04'
+    CRANpkgs:
+    - BayesBinMix
+    - label.switching
+    - foreach
+    - doParallel
+    - coda
+    - FlexMix
+    - flexclust
+    CTV_rev:
+    - Bayesian
+    - Cluster
+    - gR
+    - HighPerformanceComputing
     landing: '2017'
 - issue: 2009-1
   year: 2009
