--- a/_config.yml
+++ b/_config.yml
@@ -872,7 +872,22 @@ issues:
       CRAN repository.'
     acknowledged: '2016-09-12'
     online: '2017-04-04'
-    CRANpkgs: CRAN
+    CRANpkgs:
+    - PSF
+    - cluster
+    - knitr
+    - rmarkdown
+    - data.table
+    - forecast
+    CTV_rev:
+    - Environmetrics
+    - Finance
+    - ReproducibleResearch
+    - Cluster
+    - Econometrics
+    - HighPerformanceComputing
+    - Multivariate
+    - TimeSeries
     landing: '2017'
   - title: 'BayesBinMix: an R Package for Model Based Clustering of Multivariate Binary
       Data'
