--- a/_config.yml
+++ b/_config.yml
@@ -5722,9 +5722,9 @@ issues:
   - slug: RJ-2014-024
     old_slug: domelen-pittard
     title: "Flexible R Functions for Processing Accelerometer Data, with Emphasis
-      on NHANES 2003\x132006"
+      on NHANES 2003-2006"
     bibtitle: "Flexible R Functions for Processing Accelerometer Data, with\n          Emphasis
-      on NHANES 2003\x132006"
+      on NHANES 2003-2006"
     author:
     - Dane R. Van Domelen
     - W. Stephen Pittard
@@ -5742,7 +5742,7 @@ issues:
       data from the National Health and Nutrition            Examination Survey (NHANES),
       years 2003–2006. Its primary function generates measures of PA            volume,
       intensity, frequency, and patterns according to user-specified data processing
-      methods. This            function can process the NHANES 2003–2006 dataset in
+      methods. This            function can process the NHANES 2003-2006 dataset in
       under one minute, which is a drastic improve           ment over existing software.
       This article highlights important features of packages accelerometry and            nhanesaccel
       and demonstrates typical usage for PA researchers.'
@@ -8941,8 +8941,8 @@ issues:
   year: 2016
   volume: 8
   num: 2
-  month: December
-  bibmonth: december
+  month: Dec.
+  bibmonth: dec
   articles:
   - title: Editorial
     author: Michael Lawrence
