--- a/_config.yml
+++ b/_config.yml
@@ -730,7 +730,7 @@ issues:
       The MIC            method and its R implementation are introduced and illustrated
       with the PBC data.'
     acknowledged: '2016-08-25'
-    online: '2017-04-04'
+    online: '2017-04-27'
     landing: '2017'
   - title: Retrieval and Analysis of Eurostat Open Data with the eurostat Package
     bibtitle: |-
@@ -924,6 +924,49 @@ issues:
     - Cluster
     - gR
     - HighPerformanceComputing
+    landing: '2017'
+  - title: 'The mosaic package: helping students to `think with data'' using R'
+    bibtitle: |-
+      The mosaic package: helping students to `think with data'
+                using R
+    slug: RJ-2017-024
+    author:
+    - Randall Pruim
+    - Daniel T Kaplan
+    - Nicholas J Horton
+    bibauthor: Randall Pruim and Daniel T Kaplan and Nicholas J Horton
+    abstract: '  Abstract The mosaic package provides a simplified and systematic
+      introduction to the core functional           ity related to descriptive statistics,
+      visualization, modeling, and simulation-based inference required            in
+      first and second courses in statistics. This introduction to the package describes
+      some of the guiding            principles behind the design of the package and
+      provides illustrative examples of several of the most            important functions
+      it implements. These can be combined to help students “think with data" using
+      R            in their early course work, starting with simple, yet powerful,
+      declarative commands.'
+    acknowledged: '2015-11-19'
+    online: '2017-04-27'
+    CRANpkgs:
+    - mosaic
+    - lattice
+    - mosaic
+    - mosaic
+    - mosaicData
+    - ggplot2
+    - dplyr
+    - parallel
+    - MASS
+    CTV_rev:
+    - Graphics
+    - Multivariate
+    - Distributions
+    - Econometrics
+    - Environmetrics
+    - NumericalMathematics
+    - Phylogenetics
+    - Psychometrics
+    - Robust
+    - SocialSciences
     landing: '2017'
 - issue: 2009-1
   year: 2009
@@ -5721,10 +5764,11 @@ issues:
     - TimeSeries
   - slug: RJ-2014-024
     old_slug: domelen-pittard
-    title: "Flexible R Functions for Processing Accelerometer Data, with Emphasis
-      on NHANES 2003-2006"
-    bibtitle: "Flexible R Functions for Processing Accelerometer Data, with\n          Emphasis
-      on NHANES 2003-2006"
+    title: Flexible R Functions for Processing Accelerometer Data, with Emphasis on
+      NHANES 2003-2006
+    bibtitle: |-
+      Flexible R Functions for Processing Accelerometer Data, with
+                Emphasis on NHANES 2003-2006
     author:
     - Dane R. Van Domelen
     - W. Stephen Pittard
